[lib]
path = "src/mod.rs"

[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[dependencies]
crc32c = "0.6"
itoa = "1.0.17"
flate2 = "1.1.9"
memchr = "2.8.0"
ryu = "1.0.23"
base64-simd = "0.8.0"
jiff = "0.2.23"
sonic-rs = "0.5.7"
