[lib]
path = "src/mod.rs"

[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
debug = true
strip = false
lto = "fat"
codegen-units = 1

[dependencies]
crc32c = "0.6"
itoa = "1.0.17"
flate2 = "1.1.9"
memchr = "2.8.0"
ryu = "1.0.23"
base64-simd = "0.8.0"
jiff = "0.2.23"
log = "0.4.29"
json-escape-simd = "3.0.2"
rand = "0.10.1"
num_enum = "0.7.6"
include_bytes_aligned = "0.2.0"
